objects/Journal_Upload_Lines__c.object
<CustomObject>
    <description>Used to upload Journals of more than 150 lines</description>
    <fields>
        <fullName>Adviso__c</fullName>
        <label>Adviso</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <label>Cost Center</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dimension_1_Full__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1 Full</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Journal Upload Lines</relationshipLabel>
        <relationshipName>Journal_Upload_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>General_Ledger_Account_Full__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Ledger Account Full</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Journal Upload Lines</relationshipLabel>
        <relationshipName>Journal_Upload_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>General_Ledger_Account__c</fullName>
        <label>General Ledger Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Journal_Batch_Header__c</fullName>
        <label>Journal Batch Header</label>
        <referenceTo>Journal_Batch_Header__c</referenceTo>
        <relationshipLabel>Journal Upload Lines</relationshipLabel>
        <relationshipName>Journal_Upload_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Journal_Description__c</fullName>
        <label>Journal Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Description__c</fullName>
        <label>Line Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Type__c</fullName>
        <label>Line Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Journal Upload Lines</label>
    <nameField>
        <displayFormat>JUL-{0000}</displayFormat>
        <label>Journal Upload Lines Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Journal Upload Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>